# Algoritmes

./: CMakeLists.txt  README.md
Src/Search/: Binary.cpp  Binary.h  Finding a substring in a string.cpp  Finding a substring in a string.h  Interpolating.cpp  Interpolating.h  Linear.cpp  Linear.h  Sieve of Eratosthenes.cpp  Sieve of Eratosthenes.h
Src/Sort/: Binary tree.cpp  Binary tree.h  Bubble sort.cpp  Bubble sort.h  Insertion sort.cpp  Insertion sort.h  Selection sort.cpp  Selection sort.h  Shaker sorting .cpp  Shaker sorting .h
