cmake_minimum_required(VERSION 3.24)
project(algoritmes)

set(CMAKE_CXX_STANDARD 17)

add_executable(algoritmes main.cpp
Src/Search/Linear.cpp Src/Search/Linear.h Src/Search/Binary.cpp Src/Search/Binary.h Src/Search/Interpolating.cpp Src/Search/Interpolating.h "Src/Search/Sieve of Eratosthenes.cpp" "Src/Search/Sieve of Eratosthenes.h" "Src/Search/Finding a substring in a string.cpp" "Src/Search/Finding a substring in a string.h"
"Src/Sort/Selection sort.cpp" "Src/Sort/Selection sort.h" "Src/Sort/Bubble sort.cpp" "Src/Sort/Bubble sort.h" "Src/Sort/Shaker sorting .cpp" "Src/Sort/Shaker sorting .h" "Src/Sort/Insertion sort.cpp" "Src/Sort/Insertion sort.h" "Src/Sort/Binary tree.cpp" "Src/Sort/Binary tree.h")
